feat(104): add workers workflow Taches #253515